--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
 <nav>
   <div class="container">
-      <h1><img src="image/logo.jpg" width="50"> Hunter Top-Up Centre</h1>
+      <h1><img src="logo.jpg" width="50"> Hunter Top-Up Centre</h1>
       <ul>
           <li><a href="#hero">Home</a></li>
           <li><a href="#products">Products</a></li>
@@ -47,11 +47,11 @@
               <ul>
                
                   <li> 
-                    <img src="image/fflogo.png" width="300"> <br>
+                    <img src="fflogo.png" width="300"> <br>
                     <button class="buynow">Buy Now</button>
                   </li>
                   <li> 
-                    <img src="image/unipin.jpeg" width="300"> <br>
+                    <img src="unipin.jpeg" width="300"> <br>
                     <button class="buynow">Buy Now</button>
                   </li>
                 
@@ -65,9 +65,9 @@
         <div class="container">
             <h3>Why Choose Us?</h3>
             <ul>
-              <li> <img src="image/secure.jpeg" width="250"> </li>
-                <li><img src="image/instant.jpeg" width="250"></li>
-                <li><img src="image/customersupport.jpeg" width="250"></li>
+              <li> <img src="secure.jpeg" width="250"> </li>
+                <li><img src="instant.jpeg" width="250"></li>
+                <li><img src="customersupport.jpeg" width="250"></li>
             </ul>
         </div>
     </section>
