--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- Features List Section -->
     <section id="features-list">
         <div class="container">
-            <h3>Why Choose Us?</h3>
+            <h3>Why To Choose Us?</h3>
             <ul>
               <li> <img src="secure.jpeg" width="250"> </li>
                 <li><img src="instant.jpeg" width="250"></li>
