--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul>
           <li><a href="#hero">Home</a></li>
           <li><a href="#products">Products</a></li>
-          <li><a href="#contact-us">Contact Us</a></li>
+          <li><a href="contactus.html">Contact Us</a></li>
       </ul>
       <div class="search-bar">
         <input type="text" placeholder="Search...">
