--- a/index.html
+++ b/index.html
@@ -16,15 +16,11 @@
   <div class="container">
       <h1><img src="logo.jpg" width="50"> Hunter Top-Up Centre</h1>
       <ul>
-          <li><a href="#hero">Home</a></li>
+          <li><a href="#index">Home</a></li>
           <li><a href="#products">Products</a></li>
-          <li><a href="contactus.html">Contact Us</a></li>
+          <li><a href="#contactus">Contact Us</a></li>
       </ul>
-      <div class="search-bar">
-        <input type="text" placeholder="Search...">
-        <button>
-            <i class="fas fa-search"></i> <!-- Font Awesome search icon -->
-        </button>
+      
     </div>
     
   </div>
