--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container">
       <h1><img src="logo.jpg" width="50"> Hunter Top-Up Centre</h1>
       <ul>
-          <li><a href="#index">Home</a></li>
+          <li><a href="#index" class="active">Home</a></li>
           <li><a href="#products">Products</a></li>
           <li><a href="#contactus">Contact Us</a></li>
       </ul>
