--- a/contactus.html
+++ b/contactus.html
@@ -5,27 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css"> <!-- Link your existing CSS file here -->
+    <link  href="styles.css" rel="stylesheet"> <!-- Link your existing CSS file here -->
+    
 </head>
 <body>
 
     <!-- Navigation Bar -->
     <nav>
         <div class="container">
-            <h1>Company Name</h1>
+            <h1>07 Hunter Top-Up Centre</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#products">Products</a></li>
-                <li><a href="#contact-us" class="active">Contact Us</a></li>
+                <li><a href="#contactus.html" class="active" >Contact Us</a></li>
             </ul>
         </div>
     </nav>
 
     <!-- Hero Section -->
-    <section id="hero">
+    <header id="hero">
+        <div class="hero-content">
         <h2>Get in Touch</h2>
         <p>We'd love to hear from you! Reach out to us and we'll get back to you as soon as possible.</p>
-    </section>
+    </div>
+    </header>
+   
 
     <!-- Contact Us Section -->
     <section id="contact-us">
@@ -53,6 +57,6 @@
     <footer>
         <p>&copy; 2025 Company Name. All rights reserved.</p>
     </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
