--- a/contactus.html
+++ b/contactus.html
@@ -13,7 +13,7 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="container">
-            <h1>07 Hunter Top-Up Centre</h1>
+            <h1><img src="logo.jpg" width=50 >07 Hunter Top-Up Centre</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#products">Products</a></li>
