--- a/contactus.html
+++ b/contactus.html
@@ -13,14 +13,12 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="container">
-            <h1><img src="logo.jpg" width=50 >07 Hunter Top-Up Centre</h1>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#contactus.html" class="active" >Contact Us</a></li>
-            </ul>
-        </div>
-    </nav>
+            <h1><img src="logo.jpg" width=50> Hunter Top-Up Centre</h1>
+            <a href="index.html" >Home</a>
+            <a href="products.html" >Products</a>
+            <a href="contactus.html" class="active">Contact Us </a>
+           </div>
+      </nav>
 
     <!-- Hero Section -->
     <header id="hero">
