--- a/shootinggame.html
+++ b/shootinggame.html
@@ -14,7 +14,7 @@
           <div class="container">
               <h1><img src="image/logo.jpg" width=50> Hunter Top-Up Centre</h1>
               <a href="index.html" >Home</a>
-              <a href="products.html" >Products</a>
+              <a href="product.html" >Products</a>
               <a href="contactus.html" class="active">Contact Us </a>
              </div>
         </nav>
@@ -38,10 +38,7 @@
                     <img src="image/fflogo.png" width="300"> <br>
                     <button class="buynow">Buy Now</button>
                   </li>
-                  <li> 
-                    <img src="image/unipin.jpeg" width="300"> <br>
-                    <button class="buynow">Buy Now</button>
-                  </li>
+                  
                 
               </ul> 
             </span>
@@ -80,6 +77,6 @@
 
 
 
-
+    <script src="script.js"></script>
 </body>
 </html>
