--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
 <nav>
   <div class="container">
-      <h1><a href="index.html" > </a><img src="image/logo.jpg" width=50> Hunter Top-Up Centre </a> </h1>
+      <h1><a href="index.html" > </a><img src="logo.jpg" width=50> Hunter Top-Up Centre </a> </h1>
       <a href="index.html" class="active">Home</a>
       <a href="product.html">Products</a>
       <a href="contactus.html">Contact Us </a>
@@ -38,21 +38,21 @@
    
    
     <div class="category-item">
-        <img src="image/shootinggame.png" alt="Shooters">
+        <img src="shootinggame.png" alt="Shooters">
         <h3>Shooters Games</h3>
         <p>Buy Your Favorite Game Top-Up. At Cheap Price</p>
         <a href="shootinggame.html"> <button class="buynow">See More Products</button> </a>
     </div>
     
     <div class="category-item">
-        <img src="image/Subscriptions.png" alt="RPG">
+        <img src="Subscriptions.png" alt="RPG">
         <h3>Subscriptions</h3>
         <p>Buy Your Favorite Subscription. At Low Cost</p>
          <button class="buynow">See More Products</button> 
     </div>
     
     <div class="category-item">
-        <img src="image/giftcard.png" alt="Mobile Games">
+        <img src="giftcard.png" alt="Mobile Games">
         <h3>Gift Cards</h3>
         <p>Top up your favorite Gift Cards. At Cheap Price</p>
         <a href="giftcards.html"> <button class="buynow">See More Products</button> </a>
@@ -68,9 +68,9 @@
         <div class="container">
             <h3>Why Should You Choose Us?</h3>
             <ul>
-              <li> <img src="image/secure.jpeg" width="250"> </li>
-                <li><img src="image/instant.jpeg" width="250"></li>
-                <li><img src="image/customersupport.jpeg" width="250"></li>
+              <li> <img src="secure.jpeg" width="250"> </li>
+                <li><img src="instant.jpeg" width="250"></li>
+                <li><img src="customersupport.jpeg" width="250"></li>
             </ul>
         </div>
     </section>
