--- a/shootinggame.html
+++ b/shootinggame.html
@@ -12,7 +12,7 @@
         <!-- Navbar -->
         <nav>
           <div class="container">
-              <h1><img src="image/logo.jpg" width=50> Hunter Top-Up Centre</h1>
+              <h1><img src="logo.jpg" width=50> Hunter Top-Up Centre</h1>
               <a href="index.html" >Home</a>
               <a href="product.html" >Products</a>
               <a href="contactus.html" class="active">Contact Us </a>
@@ -35,7 +35,7 @@
               <ul>
                
                   <li> 
-                    <img src="image/fflogo.png" width="300"> <br>
+                    <img src="fflogo.png" width="300"> <br>
                     <button class="buynow">Buy Now</button>
                   </li>
                   
