--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img src="Subscriptions.png" alt="RPG">
         <h3>Subscriptions</h3>
         <p>Buy Your Favorite Subscription. At Low Cost</p>
-         <button class="buynow">See More Products</button> 
+        <a herf="subcription.html"> <button class="buynow">See More Products</button> </a>
     </div>
     
     <div class="category-item">
