--- a/subscription.html
+++ b/subscription.html
@@ -12,7 +12,7 @@
         <!-- Navbar -->
         <nav>
           <div class="container">
-              <h1><img src="image/logo.jpg" width=50> Hunter Top-Up Centre</h1>
+              <h1><img src="logo.jpg" width=50> Hunter Top-Up Centre</h1>
               <a href="index.html" >Home</a>
               <a href="product.html" class="active" >Products</a>
               <a href="contactus.html">Contact Us </a>
@@ -34,17 +34,17 @@
           <span id="features-list"> 
             <ul>
                 <li>
-                  <img src="image/office.jpeg" width="300"> <br> <h4> Microsoft Office 365 </h4> <br>
+                  <img src="office.jpeg" width="300"> <br> <h4> Microsoft Office 365 </h4> <br>
                   <button class="buynow">Buy Now</button>
                 </li>
                 
                 <li> 
-                  <img src="image/ytpremium.jpeg" width="255"> <br> <h4> Youtube Premium </h4><br>
+                  <img src="ytpremium.jpeg" width="255"> <br> <h4> Youtube Premium </h4><br>
                   <button class="buynow">Buy Now</button>
                 </li>
 
                 <li> 
-                  <img src="image/netflix.jpeg" width="180"> <br> <h4> Netflix Subscription </h4><br>
+                  <img src="netflix.jpeg" width="180"> <br> <h4> Netflix Subscription </h4><br>
                   <button class="buynow">Buy Now</button>
                 </li>
             </ul> 
