--- a/giftcards.html
+++ b/giftcards.html
@@ -12,7 +12,7 @@
         <!-- Navbar -->
         <nav>
           <div class="container">
-              <h1><img src="image/logo.jpg" width=50> Hunter Top-Up Centre</h1>
+              <h1><img src="logo.jpg" width=50> Hunter Top-Up Centre</h1>
               <a href="index.html" >Home</a>
               <a href="product.html" class="active" >Products</a>
               <a href="contactus.html">Contact Us </a>
@@ -27,14 +27,18 @@
 
 
 
-    <!-- Feature Section -->
+     <!-- Gift Card Section -->
     <section id="features">
         <div class="container">
             <h2>Gift Cards</h2>
             <span id="features-list"> 
               <ul>
                   <li>
-                    <img src="image/unipin.jpeg" width="300"> <br>
+                    <img src="unipin.jpeg" width="300"> <br> <h4> Unipin Vaucher BD </h4> <br>
+                    <button class="buynow">Buy Now</button>
+                  </li>
+                  <li> 
+                    <img src="playgift.jpeg" width="350"> <br> <h4> Google Gift Card 1$ to 10$ </h4><br>
                     <button class="buynow">Buy Now</button>
                   </li>
               </ul> 
