--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <!-- Footer content will be populated by cart.js -->
     </footer>
 
-    <script type="module" src="./toast.js"></script>
-    <script type="module" src="./cart.js"></script>
+    <script type="module" src="toast.js"></script>
+    <script type="module" src="cart.js"></script>
 </body>
 </html>
