--- a/about.html
+++ b/about.html
@@ -59,22 +59,32 @@
       <h2 class="section-title">Founders</h2>
       <div class="team-grid">
         <div class="team-card">
-          <img src="prajwal.jpg" alt="Prajwal Bhusal" />
+          <div class="team-avatar">
+            <i class="fas fa-user"></i>
+          </div>
           <h4>Prajwal Bhusal</h4>
           <span>Designer, Creator & Founder</span>
-          <a href="tel:9800745053"><i class="fas fa-phone"></i> 9800745053</a>
         </div>
         <div class="team-card">
-          <img src="prashant.jpg" alt="Prashant Subedi" />
+          <div class="team-avatar">
+            <i class="fas fa-user"></i>
+          </div>
           <h4>Prashant Subedi</h4>
           <span>Co‑founder</span>
-          <a href="tel:9768281599"><i class="fas fa-phone"></i> 9768281599</a>
         </div>
         <div class="team-card">
-          <img src="saroj.jpg" alt="Saroj Rijal" />
+          <div class="team-avatar">
+            <i class="fas fa-user"></i>
+          </div>
           <h4>Saroj Rijal</h4>
           <span>Co‑founder</span>
-          <a href="tel:9768838430"><i class="fas fa-phone"></i> 9768838430</a>
+        </div>
+        <div class="team-card">
+          <div class="team-avatar">
+            <i class="fas fa-user"></i>
+          </div>
+          <h4>Niru Gnawali</h4>
+          <span>Promoter</span>
         </div>
       </div>
     </section>
