--- a/login.html
+++ b/login.html
@@ -27,9 +27,14 @@
             </ul>
             <div class="nav-cart">
                 <a href="cart.html">
-                    <i class="fas fa-shopping-cart"></i>
-                    <span class="cart-count">0</span>
+                <i class="fas fa-shopping-cart"></i>
+                <span class="cart-count">0</span>
                 </a>
+            </div>
+            <div class="nav-search">
+                <button id="searchToggle" class="search-toggle">
+                    <i class="fas fa-search"></i>
+                </button>
             </div>
             <div class="nav-auth">
                 <a href="login.html" class="nav-link">Login</a>
@@ -42,6 +47,26 @@
             </div>
         </nav>
     </header>
+
+    <!-- Search Overlay -->
+    <div id="searchOverlay" class="search-overlay">
+        <div class="search-overlay-content">
+            <div class="search-overlay-header">
+                <h2>Search Products</h2>
+                <button id="closeSearch" class="close-search">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <div class="search-overlay-input">
+                <i class="fas fa-search search-icon"></i>
+                <input type="text" id="overlaySearchInput" placeholder="Search for products..." class="overlay-search-input">
+                <button id="overlaySearchBtn" class="overlay-search-btn">
+                    <i class="fas fa-search"></i>
+                </button>
+            </div>
+            <div id="overlaySearchResults" class="overlay-search-results"></div>
+        </div>
+    </div>
 
     <!-- Login Section -->
     <section class="auth-section">
@@ -66,7 +91,7 @@
                         <label for="password">Password</label>
                         <div class="input-group">
                             <i class="fas fa-lock"></i>
-                             <input type="password" id="password" name="password" required>
+                            <input type="password" id="password" name="password" required>
                         </div>
                     </div>
                     
@@ -113,6 +138,7 @@
     <script type="module" src="./login.js"></script>
     <script type="module" src="./toast.js"></script>
     <script type="module" src="./cart.js"></script>
+    <script type="module" src="./search.js"></script>
     <script>
         // Hamburger menu functionality
         document.addEventListener('DOMContentLoaded', function() {
