--- a/profile.html
+++ b/profile.html
@@ -72,6 +72,13 @@
                         <span class="stat-number" id="totalSpent">$0</span>
                         <span class="stat-label">Spent</span>
                     </div>
+                    </div>
+                
+                <div class="profile-actions">
+                    <button class="logout-btn" onclick="logout()">
+                        <i class="fas fa-sign-out-alt"></i>
+                        Logout
+                    </button>
                 </div>
             </div>
 
@@ -98,7 +105,7 @@
         </div>
     </section>
 
-        <!-- Footer -->
+    <!-- Footer -->
     <footer class="footer">
         <!-- Footer content will be populated by cart.js -->
     </footer>
