--- a/refund.html
+++ b/refund.html
@@ -62,7 +62,7 @@
       </ul>
 
       <h2>3. How to Request a Refund</h2>
-      <p>Contact <a href="mailto:support@cgaph.com">support@cgaph.com</a> with your order number, payment method, and issue description.</p>
+              <p>Contact <a href="mailto:cgaph.np@gmail.com">cgaph.np@gmail.com</a> with your order number, payment method, and issue description.</p>
 
       <h2>4. Processing Time</h2>
       <p>Approved refunds are processed to the original payment method within 5–10 business days.</p>
@@ -71,7 +71,7 @@
       <p>We reserve the right to investigate suspected fraud or abuse and may request additional verification.</p>
 
       <h2>6. Contact</h2>
-      <p>Questions? Reach us at <a href="mailto:support@cgaph.com">support@cgaph.com</a>.</p>
+              <p>Questions? Reach us at <a href="mailto:cgaph.np@gmail.com">cgaph.np@gmail.com</a>.</p>
     </article>
   </main>
 
