--- a/terms.html
+++ b/terms.html
@@ -83,7 +83,7 @@
        <p>We may update these Terms from time to time. Your continued use of CGAPH after changes indicates acceptance of the updated Terms.</p>
 
       <h2>10. Contact Us</h2>
-      <p>If you have any questions about these Terms, please contact us at <a href="mailto:support@cgaph.com">support@cgaph.com</a>.</p>
+              <p>If you have any questions about these Terms, please contact us at <a href="mailto:cgaph.np@gmail.com">cgaph.np@gmail.com</a>.</p>
     </article>
   </main>
 
