--- a/payment.html
+++ b/payment.html
@@ -81,7 +81,7 @@
                             <div class="form-row">
                                 <div class="form-group">
                                     <label for="fullName">Full Name</label>
-                                    <input type="text" id="fullName" name="fullName" placeholder="Your Name" readonly>
+                                    <input type="text" id="fullName" name="fullName" placeholder="Your Name" required>
                                 </div>
                                 <div class="form-group">
                                     <label for="email">Email Address</label>
