--- a/privacy.html
+++ b/privacy.html
@@ -72,7 +72,7 @@
       <p>We use industry-standard measures to protect your data, including encryption and access controls.</p>
 
       <h2>6. Your Rights</h2>
-      <p>You may request access, correction, or deletion of your personal information. Contact <a href="mailto:support@cgaph.com">support@cgaph.com</a>.</p>
+                  <p>You may request access, correction, or deletion of your personal information. Contact <a href="mailto:cgaph.np@gmail.com">cgaph.np@gmail.com</a>.</p>
 
       <h2>7. Children's Privacy</h2>
       <p>Our services are not directed to children under 13. We do not knowingly collect information from children.</p>
@@ -81,7 +81,7 @@
       <p>We may update this privacy policy. We encourage you to review it periodically.</p>
 
       <h2>9. Contact Us</h2>
-      <p>For questions about this policy, contact <a href="mailto:support@cgaph.com">support@cgaph.com</a>.</p>
+              <p>For questions about this policy, contact <a href="mailto:cgaph.np@gmail.com">cgaph.np@gmail.com</a>.</p>
     </article>
   </main>
 
