--- a/product-details.html
+++ b/product-details.html
@@ -25,12 +25,22 @@
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
+                        <div class="nav-search">
+                <button id="searchToggle" class="search-toggle">
+                    <i class="fas fa-search"></i>
+                </button>
+            </div>
             <div class="nav-cart">
                 <a href="cart.html">
-                  <i class="fas fa-shopping-cart"></i>
-                  <span class="cart-count">0</span>
+                <i class="fas fa-shopping-cart"></i>
+                <span class="cart-count">0</span>
                 </a>
-              </div>
+            </div>
+            <div class="nav-search">
+                <button id="searchToggle" class="search-toggle">
+                    <i class="fas fa-search"></i>
+                </button>
+            </div>
               <div class="hamburger" aria-label="Menu" role="button" tabindex="0">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -38,6 +48,26 @@
               </div>
         </nav>
     </header>
+
+    <!-- Search Overlay -->
+    <div id="searchOverlay" class="search-overlay">
+        <div class="search-overlay-content">
+            <div class="search-overlay-header">
+                <h2>Search Products</h2>
+                <button id="closeSearch" class="close-search">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <div class="search-overlay-input">
+                <i class="fas fa-search search-icon"></i>
+                <input type="text" id="overlaySearchInput" placeholder="Search for products..." class="overlay-search-input">
+                <button id="overlaySearchBtn" class="overlay-search-btn">
+                    <i class="fas fa-search"></i>
+                </button>
+            </div>
+            <div id="overlaySearchResults" class="overlay-search-results"></div>
+        </div>
+    </div>
 
     <!-- Product Details Section -->
     <section class="product-details-section">
@@ -185,5 +215,6 @@
     <script type="module" src="./toast.js"></script>
     <script type="module" src="./cart.js"></script>
     <script type="module" src="./products.js"></script>
+    <script type="module" src="./search.js"></script>
 </body>
 </html>
