--- a/admin.html
+++ b/admin.html
@@ -784,8 +784,8 @@
     </div>
   </footer>
 
-  <script type="module" src="./toast.js"></script>
-  <script type="module" src="./cart.js"></script>
+  <script type="module" src="toast.js"></script>
+  <script type="module" src="cart.js"></script>
   <script type="module" src="./admin.js"></script>
 </body>
 </html>
