--- a/categories.html
+++ b/categories.html
@@ -503,9 +503,9 @@
     <!-- Footer content will be populated by cart.js -->
   </footer>
 
-  <script type="module" src="./toast.js"></script>
-  <script type="module" src="./cart.js"></script>
-  <script type="module" src="./search.js"></script>
+  <script type="module" src="toast.js"></script>
+  <script type="module" src="cart.js"></script>
+  <script type="module" src="search.js"></script>
   <script type="module">
     import { db } from './firebase-config.js';
     import { collection, getDocs, query, where, orderBy } from 'https://www.gstatic.com/firebasejs/12.1.0/firebase-firestore.js';
