--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
             <!-- Footer content will be populated by cart.js -->
   </footer>
 
-  <script type="module" src="./cart.js"></script>
+  <script type="module" src="cart.js"></script>
   <script>
     // Contact form functionality
     document.addEventListener('DOMContentLoaded', function() {
