--- a/index.html
+++ b/index.html
@@ -183,10 +183,11 @@
         <!-- Footer content will be populated by cart.js -->
     </footer>
 
-    <script type="module" src="./toast.js"></script>
-    <script type="module" src="./cart.js"></script>
-    <script type="module" src="./search.js"></script>
-    <script type="module" src="./category-modal.js"></script>
-    <script type="module" src="./scroll-animations.js"></script>
+    <script type="module" src="toast.js"></script>
+    <script type="module" src="cart.js"></script>
+    <script type="module" src="search.js"></script>
+    <script type="module" src="category-modal.js"></script>
+    <script type="module" src="scroll-animations.js"></script>
 </body>
 </html>
+
