--- a/refund.html
+++ b/refund.html
@@ -79,6 +79,6 @@
             <!-- Footer content will be populated by cart.js -->
   </footer>
 
-  <script type="module" src="./cart.js"></script>
+  <script type="module" src="cart.js"></script>
 </body>
 </html>
