--- a/register.html
+++ b/register.html
@@ -175,9 +175,9 @@
   });
 })();
 </script>
-<script type="module" src="./toast.js"></script>
-<script type="module" src="./register.js"></script>
-<script type="module" src="./cart.js"></script>
+<script type="module" src="toast.js"></script>
+<script type="module" src="register.js"></script>
+<script type="module" src="cart.js"></script>
 <script>
     // Hamburger menu functionality
     document.addEventListener('DOMContentLoaded', function() {
@@ -202,3 +202,4 @@
 </script>
 </body>
 </html>
+
