--- a/login.html
+++ b/login.html
@@ -117,10 +117,6 @@
                             <i class="fab fa-google"></i>
                             Google
                         </button>
-                        <button class="social-btn facebook">
-                            <i class="fab fa-facebook-f"></i>
-                            Facebook
-                        </button>
                     </div>
                 </div>
                 
@@ -135,10 +131,10 @@
     <footer class="footer">
                 <!-- Footer content will be populated by cart.js -->
     </footer>
-    <script type="module" src="login.js"></script>
-    <script type="module" src="toast.js"></script>
-    <script type="module" src="cart.js"></script>
-    <script type="module" src="search.js"></script>
+    <script type="module" src="./login.js"></script>
+    <script type="module" src="./toast.js"></script>
+    <script type="module" src="./cart.js"></script>
+    <script type="module" src="./search.js"></script>
     <script>
         // Hamburger menu functionality
         document.addEventListener('DOMContentLoaded', function() {
@@ -163,4 +159,3 @@
     </script>
 </body>
 </html>
-
