--- a/register.html
+++ b/register.html
@@ -136,10 +136,6 @@
                             <i class="fab fa-google"></i>
                             Google
                         </button>
-                        <button class="social-btn facebook">
-                            <i class="fab fa-facebook-f"></i>
-                            Facebook
-                        </button>
                     </div>
                 </div>
                 
@@ -175,9 +171,9 @@
   });
 })();
 </script>
-<script type="module" src="toast.js"></script>
-<script type="module" src="register.js"></script>
-<script type="module" src="cart.js"></script>
+<script type="module" src="./toast.js"></script>
+<script type="module" src="./register.js"></script>
+<script type="module" src="./cart.js"></script>
 <script>
     // Hamburger menu functionality
     document.addEventListener('DOMContentLoaded', function() {
@@ -202,4 +198,3 @@
 </script>
 </body>
 </html>
-
