--- a/product-details.html
+++ b/product-details.html
@@ -36,16 +36,12 @@
                 <span class="cart-count">0</span>
                 </a>
             </div>
-            <div class="nav-search">
-                <button id="searchToggle" class="search-toggle">
-                    <i class="fas fa-search"></i>
-                </button>
-            </div>
+            
               <div class="hamburger" aria-label="Menu" role="button" tabindex="0">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
-              </div>
+            </div>
         </nav>
     </header>
 
@@ -65,7 +61,7 @@
                     <i class="fas fa-search"></i>
                 </button>
             </div>
-            <div id="overlaySearchResults" class="overlay-search-results"></div>
+           
         </div>
     </div>
 
@@ -78,21 +74,23 @@
                 <i class="fas fa-chevron-right"></i>
                 <a href="index.html#games">Games</a>
                 <i class="fas fa-chevron-right"></i>
-                <span>Loading...</span>
+                <span>Product</span>
             </div>
 
             <!-- Product Main -->
             <div class="product-main">
                 <!-- Product Image -->
                 <div class="product-image-section">
-                    <div class="product-image"></div>
+                    <div class="product-image">
+                        <i class="fas fa-image"></i>
+                    </div>
                     <div class="product-gallery" style="display:none"></div>
                 </div>
 
                 <!-- Product Info -->
                 <div class="product-info-section">
                     <div class="product-header">
-                        <h1>Loading...</h1>
+                        <h1>Product Name</h1>
                         <div class="product-rating">
                             <div class="stars">
                                 <i class="fas fa-star"></i>
@@ -101,10 +99,10 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star-half-alt"></i>
                             </div>
-                            <span class="rating-text">Loading...</span>
+                            <span class="rating-text">No ratings yet</span>
                         </div>
                         <p class="product-description">
-                            Loading product description...
+                            Product description will appear here...
                         </p>
                     </div>
 
@@ -112,9 +110,7 @@
                     <div class="product-options">
                         <h3>Select Amount</h3>
                         <div class="option-grid">
-                            <div class="loading-option">
-                                <div class="loading-placeholder">Loading variants...</div>
-                            </div>
+                            <!-- Product variants will be loaded here -->
                         </div>
                     </div>
 
@@ -165,9 +161,9 @@
                                     <span class="rating-number" id="avgRating">-</span>
                                     <div class="stars" id="avgStars"></div>
                                     <span class="total-reviews" id="totalReviews">0 reviews</span>
-                                </div>
+                                    </div>
                                 <div class="rating-bars" id="ratingBars"></div>
-                            </div>
+                                </div>
                             <button class="btn-write-review" id="writeReviewBtn">Write a Review</button>
                         </div>
 
@@ -186,16 +182,16 @@
                                             <option value="2">2 - Poor</option>
                                             <option value="1">1 - Terrible</option>
                                         </select>
-                                    </div>
+                                        </div>
                                     <div class="form-group">
                                         <label for="reviewText">Your Review</label>
                                         <textarea id="reviewText" required placeholder="Share your experience..."></textarea>
-                                    </div>
-                                </div>
+                                            </div>
+                                        </div>
                                 <div class="product-actions">
                                     <button type="submit" class="btn">Submit Review</button>
                                     <button type="button" class="btn" id="cancelReviewBtn">Cancel</button>
-                                </div>
+                                    </div>
                             </form>
                         </div>
                     </div>
@@ -212,9 +208,9 @@
                 <!-- Footer content will be populated by cart.js -->
     </footer>
 
-    <script type="module" src="toast.js"></script>
-    <script type="module" src="cart.js"></script>
-    <script type="module" src="products.js"></script>
-    <script type="module" src="search.js"></script>
+    <script type="module" src="./toast.js"></script>
+    <script type="module" src="./cart.js"></script>
+    <script type="module" src="./products.js"></script>
+    <script type="module" src="./search.js"></script>
 </body>
 </html>
