--- a/profile.html
+++ b/profile.html
@@ -109,9 +109,9 @@
     <footer class="footer">
         <!-- Footer content will be populated by cart.js -->
     </footer>
-    <script type="module" src="toast.js"></script>
-    <script type="module" src="profile.js"></script>
-    <script type="module" src="cart.js"></script>
+    <script type="module" src="./toast.js"></script>
+    <script type="module" src="./profile.js"></script>
+    <script type="module" src="./cart.js"></script>
     <script>
         // Hamburger menu functionality
         document.addEventListener('DOMContentLoaded', function() {
@@ -136,4 +136,3 @@
     </script>
 </body>
 </html>
-
