--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
         <!-- Footer content will be populated by cart.js -->
     </footer>
 
-    <script type="module" src="./toast.js"></script>
-    <script type="module" src="./cart.js"></script>
-    <script type="module" src="./search.js"></script>
-    <script type="module" src="./scroll-animations.js"></script>
-    <script type="module" src="./latest-purchases.js"></script>
+    <script type="module" src="toast.js"></script>
+    <script type="module" src="cart.js"></script>
+    <script type="module" src="search.js"></script>
+    <script type="module" src="scroll-animations.js"></script>
+    <script type="module" src="latest-purchases.js"></script>
 </body>
 </html>
