--- a/login.html
+++ b/login.html
@@ -131,10 +131,10 @@
     <footer class="footer">
                 <!-- Footer content will be populated by cart.js -->
     </footer>
-    <script type="module" src="./login.js"></script>
-    <script type="module" src="./toast.js"></script>
-    <script type="module" src="./cart.js"></script>
-    <script type="module" src="./search.js"></script>
+    <script type="module" src="login.js"></script>
+    <script type="module" src="toast.js"></script>
+    <script type="module" src="cart.js"></script>
+    <script type="module" src="search.js"></script>
     <script>
         // Hamburger menu functionality
         document.addEventListener('DOMContentLoaded', function() {
@@ -159,3 +159,4 @@
     </script>
 </body>
 </html>
+
