--- a/payment.html
+++ b/payment.html
@@ -194,9 +194,10 @@
                 <!-- Footer content will be populated by cart.js -->
     </footer>
 
-    <script type="module" src="./toast.js"></script>
-    <script type="module" src="./cart.js"></script>
+    <script type="module" src="toast.js"></script>
+    <script type="module" src="cart.js"></script>
     <!-- Page logic (ES modules) -->
-    <script type="module" src="./payment.js"></script>
+    <script type="module" src="payment.js"></script>
 </body>
 </html>
+
