--- a/index.html
+++ b/index.html
@@ -164,7 +164,17 @@
     <footer id="contact" class="footer">
         <!-- Footer content will be populated by cart.js -->
     </footer>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4664229395164784"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-gw-3+1f-3d+2z"
+     data-ad-client="ca-pub-4664229395164784"
+     data-ad-slot="4712325419"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <script type="module" src="toast.js"></script>
     <script type="module" src="cart.js"></script>
     <script type="module" src="search.js"></script>
