--- a/about.html
+++ b/about.html
@@ -16,18 +16,15 @@
         <span>CGAPH</span>
       </div>
       <ul class="nav-menu">
-        <li><a href="index.html#home" class="nav-link">Home</a></li>
-        <li><a href="index.html#games" class="nav-link">Games</a></li>
-        <li><a href="index.html#gift-cards" class="nav-link">Gift Cards</a></li>
-        <li><a href="product-details.html" class="nav-link">Products</a></li>
-
-        <li><a href="about.html" class="nav-link">About</a></li>
-        <li><a href="contact.html" class="nav-link">Contact</a></li>
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="all-products.html" class="nav-link">Products</a></li>
+        <li><a href="index.html#latest-purchases" class="nav-link">Recent</a></li>
+        <li><a href="index.html#features" class="nav-link">Features</a></li>
       </ul>
       <div class="nav-cart">
         <a href="cart.html">
-          <i class="fas fa-shopping-cart"></i>
-          <span class="cart-count">0</span>
+        <i class="fas fa-shopping-cart"></i>
+        <span class="cart-count">0</span>
         </a>
       </div>
       <div class="nav-auth">
@@ -51,7 +48,7 @@
 
   <main class="page-container">
     <section class="content-card" style="margin-bottom:1.5rem;">
-         <h2 class="section-title">Our Story</h2>
+      <h2 class="section-title">Our Story</h2>
        <p class="section-subtitle">CGAPH is a platform for instant delivery of digital gaming top-ups, gift cards, and entertainment codes. Built with a passion for gaming and technology, our mission is to provide a safe and smooth experience for players worldwide.</p>
     </section>
 
@@ -94,6 +91,7 @@
             <!-- Footer content will be populated by cart.js -->
   </footer>
 
-  <script type="module" src="cart.js"></script>
+  <script type="module" src="./cart.js"></script>
+  <script type="module" src="./loading.js"></script>
 </body>
 </html>
