--- a/admin.html
+++ b/admin.html
@@ -625,15 +625,7 @@
                             <label for="productName">Product Name</label>
                             <input type="text" id="productName" required>
                         </div>
-                        <div class="form-group">
-                            <label for="productCategory">Category</label>
-                            <select id="productCategory" required>
-                                <option value="">Select Category</option>
-                                <option value="Gift Cards">Gift Cards</option>
-                                <option value="Game Top-Up">Game Top-Up</option>
-                                <option value="Streaming">Streaming</option>
-                            </select>
-                        </div>
+
                     </div>
 
                     <div class="form-group">
@@ -781,6 +773,7 @@
 
     <script type="module" src="toast.js"></script>
     <script type="module" src="admin.js"></script>
+    <script type="module" src="loading.js"></script>
 </body>
 </html>
 
