--- a/terms.html
+++ b/terms.html
@@ -16,13 +16,10 @@
          <span>CGAPH</span>
       </div>
       <ul class="nav-menu">
-        <li><a href="index.html#home" class="nav-link">Home</a></li>
-        <li><a href="index.html#games" class="nav-link">Games</a></li>
-        <li><a href="index.html#gift-cards" class="nav-link">Gift Cards</a></li>
-        <li><a href="product-details.html" class="nav-link">Products</a></li>
-
-        <li><a href="about.html" class="nav-link">About</a></li>
-        <li><a href="contact.html" class="nav-link">Contact</a></li>
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="all-products.html" class="nav-link">Products</a></li>
+        <li><a href="index.html#latest-purchases" class="nav-link">Recent</a></li>
+        <li><a href="index.html#features" class="nav-link">Features</a></li>
       </ul>
       <div class="nav-cart">
         <a href="cart.html">
@@ -91,6 +88,7 @@
             <!-- Footer content will be populated by cart.js -->
   </footer>
 
-  <script type="module" src="cart.js"></script>
+  <script type="module" src="./cart.js"></script>
+  <script type="module" src="./loading.js"></script>
 </body>
 </html>
