--- a/about.html
+++ b/about.html
@@ -91,7 +91,8 @@
             <!-- Footer content will be populated by cart.js -->
   </footer>
 
-  <script type="module" src="./cart.js"></script>
-  <script type="module" src="./loading.js"></script>
+  <script type="module" src="cart.js"></script>
+  <script type="module" src="loading.js"></script>
 </body>
 </html>
+
