--- a/all-products.html
+++ b/all-products.html
@@ -78,9 +78,9 @@
         <!-- Footer content will be populated by cart.js -->
     </footer>
 
-    <script type="module" src="./toast.js"></script>
-    <script type="module" src="./cart.js"></script>
-    <script type="module" src="./all-products.js"></script>
-    <script type="module" src="./loading.js"></script>
+    <script type="module" src="toast.js"></script>
+    <script type="module" src="cart.js"></script>
+    <script type="module" src="all-products.js"></script>
+    <script type="module" src="loading.js"></script>
 </body>
 </html>
