--- a/login.html
+++ b/login.html
@@ -69,9 +69,9 @@
         </div>
     </section>
 
-    <script type="module" src="./login.js"></script>
-    <script type="module" src="./toast.js"></script>
-    <script type="module" src="./loading.js"></script>
+    <script type="module" src="login.js"></script>
+    <script type="module" src="toast.js"></script>
+    <script type="module" src="loading.js"></script>
     <script>
         // Toggle password visibility
         function togglePassword(inputId) {
