--- a/terms.html
+++ b/terms.html
@@ -80,15 +80,53 @@
        <p>We may update these Terms from time to time. Your continued use of CGAPH after changes indicates acceptance of the updated Terms.</p>
 
       <h2>10. Contact Us</h2>
-              <p>If you have any questions about these Terms, please contact us at <a href="mailto:cgaph.np@gmail.com">cgaph.np@gmail.com</a>.</p>
+                              <p>If you have any questions about these Terms, please contact us at <a href="mailto:support@cgaph.com">support@cgaph.com</a>.</p>
     </article>
   </main>
 
-  <footer class="footer">
-            <!-- Footer content will be populated by cart.js -->
+    <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-section">
+        <h3>CGAPH</h3>
+        <p>Your trusted source for digital gaming and entertainment content.</p>
+        <div class="social-links">
+          <a href="https://www.facebook.com/profile.php?id=61579288196935" target="_blank" rel="noopener" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+          <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+          <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="#" aria-label="Discord"><i class="fab fa-discord"></i></a>
+        </div>
+      </div>
+      <div class="footer-section">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="all-products.html">Products</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h4>Support</h4>
+        <ul>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="terms.html">Terms of Service</a></li>
+          <li><a href="refund.html">Refund Policy</a></li>
+          <li><a href="contact.html">Help Center</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h4>Contact Info</h4>
+        <p><i class="fas fa-envelope"></i> support@cgaph.com</p>
+        <p><i class="fas fa-phone"></i> +977 9800745053</p>
+        <p><i class="fas fa-map-marker-alt"></i> Kathmandu, Nepal</p>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2024 CGAPH. All rights reserved.</p>
+    </div>
   </footer>
 
-  <script type="module" src="cart.js"></script>
-  <script type="module" src="loading.js"></script>
+  <script type="module" src="./cart.js"></script>
+  <script type="module" src="./loading.js"></script>
 </body>
 </html>
